static/css/style.css
/* Minimal custom styles for IntegrityCloud */
body { -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale; }
.container { max-width: 1100px; }
input[type=file] { color: #fff; }
html, body {
	margin: 0;
	padding: 0;
	width: 100%;
	height: 100%;
	background:#000;
}

.fixed-bg {
	position: fixed;
	left:50%;
	top:50%;
	transform:translate(-50%, -50%);
	width:100vw;
	height:100vh;
}

.text-img {
	display:none;
}

canvas {
	position: absolute;
	top:50%;
	left:50%;
	transform:translate(-50%, -50%);  
	aspect-ratio: 1;
	width: 100%;
	height: auto;
}

@media (max-aspect-ratio: 1) {
	canvas {
		width: auto;
		height: 100%;
	}
}
/* make background canvas not block clicks */
.fixed-bg, canvas { pointer-events: none; }


/* keep page content above background */
body, header, main, footer {
  position: relative;
  z-index: 1;
}

